# scsn_fdsnws

./: README.md  fdsnws.toml  setup.cfg
public/: index.html
public/dataselect/1/builder/: index.html  style.css
public/dataselect/builder/: index.html  style.css
public/fdsnws/dataselect/1/: index.html  version
public/fdsnws/dataselect/1/builder/: index.html
src/scsn_fdsnws/: __init__.py  archive.py  dataselect.py  fdsn_error.py  server.py
